Add function to register and list documents

--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -13,9 +13,9 @@ sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 securityManager.sessionManager = $sessionManager
 securityManager.sessionManager.sessionIdUrlRewritingEnabled = false
 
-authRealm = com.emilima.serviciodocumental.auth.AuthJdbcRealm
+authRealm = pe.com.emilima.serviciodocumental.auth.AuthJdbcRealm
 authRealm.credentialsMatcher = $sha256Matcher
 
 [urls]
 /login.jsp = anon
-/index.jsp = user
+# /index.jsp = user
